# rmenu

./: Cargo.toml  README.md  flake.nix  justfile  result  rmenu_run
rmenu/: Cargo.toml
rmenu/src/: config.rs  draw.rs  main.rs  parts.rs
rmenu_path/: Cargo.toml
rmenu_path/src/: main.rs
src/: config.rs  draw.rs  keymap.rs  main.rs
