[package]
name = "rmenu"
version = "1.0.0"
edition = "2021"
description = "A small rust application launcher"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rmenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dependencies]
xcb = "0.10.1"
pangocairo = "0.14.0"

[dependencies.cairo-rs]
version = "0.14.9"
features = ["xcb"]
