[package]
name = "rmenu"
version = "1.0.0"
edition = "2021"
description = "A small rust application launcher"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rmenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "1.3.0", features = ["as-raw-xcb-connection", "xkb"] }
pangocairo = "0.19.2"
cairo-rs = { version = "0.19.2", features = ["xcb"] }
xkbcommon = { version = "0.7.0", features = ["x11"] }
