[package]
name = "rmenu"
version = "1.0.0"
edition = "2021"
description = "A small rust application launcher"
readme = "README.md"
repository = "https://github.com/JuliusKreutz/rmenu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "1.4.0", features = ["as-raw-xcb-connection", "xkb"] }
pangocairo = "0.20.1"
cairo-rs = { version = "0.20.1", features = ["xcb"] }
xkbcommon = { version = "0.8.0", features = ["x11"] }
